# llvm-project

llvm/: CMakeLists.txt
llvm/cmake/modules/: AddLLVM.cmake  LLVM-Build.cmake  LLVM-Config.cmake  LLVMComponents.cmake
llvm/docs/: DeveloperPolicy.rst
llvm/lib/: CMakeLists.txt
llvm/lib/ExecutionEngine/JITLink/: CMakeLists.txt
llvm/lib/ExecutionEngine/Orc/: CMakeLists.txt
llvm/lib/Frontend/OpenACC/: CMakeLists.txt
llvm/lib/Support/: CMakeLists.txt
llvm/tools/llvm-cfi-verify/: CMakeLists.txt
llvm/tools/llvm-cfi-verify/lib/: CMakeLists.txt
llvm/tools/llvm-config/: CMakeLists.txt
llvm/tools/llvm-exegesis/lib/: CMakeLists.txt
llvm/unittests/TableGen/: CMakeLists.txt
llvm/unittests/tools/llvm-cfi-verify/: CMakeLists.txt
llvm/unittests/tools/llvm-exegesis/: CMakeLists.txt
llvm/utils/FileCheck/: CMakeLists.txt
llvm/utils/yaml-bench/: CMakeLists.txt
mlir/: CMakeLists.txt
mlir/cmake/modules/: AddMLIRPythonExtension.cmake
mlir/include/mlir-c/: IR.h  Registration.h
mlir/include/mlir/IR/: TypeConversion.h  TypeSupport.h
mlir/include/mlir/Transforms/: DialectConversion.h
mlir/lib/Bindings/Python/: Globals.h  IRCore.cpp  IRModules.cpp  IRModules.h  MainModule.cpp
mlir/lib/CAPI/IR/: IR.cpp
mlir/lib/Conversion/ControlFlowToLLVM/: ControlFlowToLLVM.cpp
mlir/lib/Transforms/: DialectConversion.cpp
mlir/python/: CMakeLists.txt
mlir/python/mlir/: ir.py  passmanager.py
mlir/test/CAPI/: sparse_tensor.c
mlir/tools/mlir-linalg-ods-gen/: mlir-linalg-ods-yaml-gen.cpp
mlir/tools/mlir-pdll/: mlir-pdll.cpp
(+17 files in other folders)
